WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35413
[Qt] Incorrect handling of MIME types in Media Player
https://bugs.webkit.org/show_bug.cgi?id=35413
Summary
[Qt] Incorrect handling of MIME types in Media Player
Nick Young
Reported
2010-02-25 17:54:45 PST
A bug was introduced by
http://trac.webkit.org/changeset/55153
- which has some broken MIME logic. Patch coming.
Attachments
Initial Patch
(1.34 KB, patch)
2010-02-25 17:57 PST
,
Nick Young
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nick Young
Comment 1
2010-02-25 17:57:38 PST
Created
attachment 49556
[details]
Initial Patch Very simple patch.
WebKit Commit Bot
Comment 2
2010-02-26 12:25:05 PST
Comment on
attachment 49556
[details]
Initial Patch Clearing flags on attachment: 49556 Committed
r55299
: <
http://trac.webkit.org/changeset/55299
>
WebKit Commit Bot
Comment 3
2010-02-26 12:25:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug