2010-02-26  Nicholas Young  <nicholas.young@nokia.com>

Reviewed by Tor Arne Vestbø.

        [Qt] Incorrect handling of MIME types in Media Player
        https://bugs.webkit.org/show_bug.cgi?id=35413

        No new tests. Bug fix in backend.

        * platform/graphics/qt/MediaPlayerPrivateQt.cpp:
        (WebCore::MediaPlayerPrivate::supportsType): Corrected logic.

Canonical link: https://commits.webkit.org/46600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55299 268f45cc-cd09-0410-ab3c-d52691b4dbfc